--- a/Reduced_PCL.ipynb
+++ b/Reduced_PCL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1e6iUOwd8NaVkBwvhlxsBK0r3EvRYVAG6",
-      "authorship_tag": "ABX9TyMs/DodJ089OjUBD4bAJVPm",
+      "authorship_tag": "ABX9TyNh5RmqzmTS1gkQ2DKhkxwl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "VeEYaVTHJfbp"
       },
@@ -41,7 +41,7 @@
         "from sklearn.metrics import roc_curve, auc\n",
         "\n",
         "\n",
-        "PTH = '/content/data'"
+        "PTH = '/content/drive/MyDrive/Colab Notebooks/Postpartum_depression/Reduced_PCL/data'"
       ]
     },
     {
@@ -59,9 +59,10 @@
           "height": 424
         },
         "id": "2hgZMCJTLOTe",
-        "outputId": "f0b1090c-6eed-4758-f737-270b7de61cd1"
+        "outputId": "ea5b1a96-9d1c-4e81-a162-32cba5a9b4ab",
+        "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -110,7 +111,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-26dc1052-e7d7-4c61-a022-d379a015f0d9\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2dd6ca62-1607-4df5-8ebb-bd4752782a75\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -424,7 +425,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-26dc1052-e7d7-4c61-a022-d379a015f0d9')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2dd6ca62-1607-4df5-8ebb-bd4752782a75')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -476,12 +477,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-26dc1052-e7d7-4c61-a022-d379a015f0d9 button.colab-df-convert');\n",
+              "        document.querySelector('#df-2dd6ca62-1607-4df5-8ebb-bd4752782a75 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-26dc1052-e7d7-4c61-a022-d379a015f0d9');\n",
+              "        const element = document.querySelector('#df-2dd6ca62-1607-4df5-8ebb-bd4752782a75');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -501,8 +502,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-85188529-0b82-463a-a341-c1e4d0fc5121\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-85188529-0b82-463a-a341-c1e4d0fc5121')\"\n",
+              "    <div id=\"df-c4936ebc-9742-46cf-9bfb-d6a226f85f42\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c4936ebc-9742-46cf-9bfb-d6a226f85f42')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -621,14 +622,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-85188529-0b82-463a-a341-c1e4d0fc5121 button');\n",
+              "            document.querySelector('#df-c4936ebc-9742-46cf-9bfb-d6a226f85f42 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_637e0935-3548-40ea-9cd6-95789ccf6d18\">\n",
+              "  <div id=\"id_c287f662-98b7-4ea0-aaac-9288a5fb481b\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -672,7 +673,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_637e0935-3548-40ea-9cd6-95789ccf6d18 button.colab-df-generate');\n",
+              "        document.querySelector('#id_c287f662-98b7-4ea0-aaac-9288a5fb481b button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -692,7 +693,35 @@
             }
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df['PCL_total'].mean(),\n",
+        "\",\",\n",
+        "df['PCL_total'].max(),\n",
+        "\",\",\n",
+        "df['PCL_total'].min()\n",
+        ")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XAMpXsQ5ex0L",
+        "outputId": "26eb3f92-1851-49c1-e3b4-7db09746861c"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "18.588785046728972 , 57 , 0\n"
+          ]
         }
       ]
     },
@@ -728,9 +757,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3CJ2D-5urPWm",
-        "outputId": "f2459e2d-0745-4ecd-dbc8-ea98eadf5db2"
+        "outputId": "f17301b0-f17a-4b77-fa8b-fdea27674a83"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -744,14 +773,57 @@
     {
       "cell_type": "code",
       "source": [
+        "import numpy as np\n",
+        "from sklearn.metrics import roc_auc_score\n",
+        "\n",
+        "y = CAPS[mask].astype(int)\n",
+        "x = PCL5[mask].astype(float)\n",
+        "\n",
+        "auc = roc_auc_score(y, x)\n",
+        "n1 = np.sum(y == 1)   # positives\n",
+        "n0 = np.sum(y == 0)   # negatives\n",
+        "\n",
+        "# Hanley–McNeil (1982) variance\n",
+        "Q1 = auc / (2 - auc)\n",
+        "Q2 = 2 * auc**2 / (1 + auc)\n",
+        "var = (auc*(1 - auc) + (n1 - 1)*(Q1 - auc**2) + (n0 - 1)*(Q2 - auc**2)) / (n0 * n1)\n",
+        "se = np.sqrt(var)\n",
+        "\n",
+        "z = 1.96  # for ~95% CI\n",
+        "ci_lower = max(0.0, auc - z*se)\n",
+        "ci_upper = min(1.0, auc + z*se)\n",
+        "\n",
+        "print(f\"AUC = {auc:.3f} (95% CI {ci_lower:.3f}–{ci_upper:.3f})\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2IaU3Z0hiTkb",
+        "outputId": "aceee325-e507-4c98-9d57-37f711c339a6"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "AUC = 0.923 (95% CI 0.851–0.995)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import pandas as pd\n",
         "from sklearn.metrics import confusion_matrix, roc_curve, auc\n",
         "\n",
-        "X = df['PCL_total']\n",
-        "#X = df['PCL_reduced_total']\n",
+        "#X = df['PCL_total']\n",
+        "X = df['PCL_reduced_total']\n",
         "y = df['caps_ptsd1']\n",
         "\n",
-        "thresholds = range(18, 39)\n",
+        "thresholds = range(1, 18) # range(19,38) # for full 20 item set\n",
         "results = []\n",
         "\n",
         "for thr in thresholds:\n",
@@ -779,65 +851,10 @@
         "print(results_df)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NThy3Y3UJqdD",
-        "outputId": "c3959abf-65db-442e-e6ad-8c89c7ca6514"
+        "id": "NThy3Y3UJqdD"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "    Threshold  Sensitivity  Specificity       PPV       NPV  J_statistic  \\\n",
-            "1          19     0.888889       0.7250  0.521739  0.950820     0.613889   \n",
-            "2          20     0.888889       0.7375  0.533333  0.951613     0.626389   \n",
-            "3          21     0.888889       0.7625  0.558140  0.953125     0.651389   \n",
-            "4          22     0.851852       0.8000  0.589744  0.941176     0.651852   \n",
-            "5          23     0.851852       0.8250  0.621622  0.942857     0.676852   \n",
-            "6          24     0.814815       0.8375  0.628571  0.930556     0.652315   \n",
-            "7          25     0.777778       0.8500  0.636364  0.918919     0.627778   \n",
-            "8          26     0.777778       0.8500  0.636364  0.918919     0.627778   \n",
-            "9          27     0.740741       0.8750  0.666667  0.909091     0.615741   \n",
-            "10         28     0.740741       0.8750  0.666667  0.909091     0.615741   \n",
-            "11         29     0.740741       0.9000  0.714286  0.911392     0.640741   \n",
-            "12         30     0.629630       0.9250  0.739130  0.880952     0.554630   \n",
-            "13         31     0.592593       0.9250  0.727273  0.870588     0.517593   \n",
-            "14         32     0.555556       0.9250  0.714286  0.860465     0.480556   \n",
-            "15         33     0.555556       0.9500  0.789474  0.863636     0.505556   \n",
-            "16         34     0.555556       0.9500  0.789474  0.863636     0.505556   \n",
-            "17         35     0.555556       0.9750  0.882353  0.866667     0.530556   \n",
-            "18         36     0.555556       0.9750  0.882353  0.866667     0.530556   \n",
-            "19         37     0.555556       0.9750  0.882353  0.866667     0.530556   \n",
-            "20         38     0.518519       0.9750  0.875000  0.857143     0.493519   \n",
-            "\n",
-            "         AUC  \n",
-            "0   0.843981  \n",
-            "1   0.806944  \n",
-            "2   0.813194  \n",
-            "3   0.825694  \n",
-            "4   0.825926  \n",
-            "5   0.838426  \n",
-            "6   0.826157  \n",
-            "7   0.813889  \n",
-            "8   0.813889  \n",
-            "9   0.807870  \n",
-            "10  0.807870  \n",
-            "11  0.820370  \n",
-            "12  0.777315  \n",
-            "13  0.758796  \n",
-            "14  0.740278  \n",
-            "15  0.752778  \n",
-            "16  0.752778  \n",
-            "17  0.765278  \n",
-            "18  0.765278  \n",
-            "19  0.765278  \n",
-            "20  0.746759  \n"
-          ]
-        }
-      ]
+      "outputs": []
     }
   ]
 }
