--- a/Reduced_PCL.ipynb
+++ b/Reduced_PCL.ipynb
@@ -41,7 +41,7 @@
         "from sklearn.metrics import roc_curve, auc\n",
         "\n",
         "\n",
-        "PTH = '/content/drive/MyDrive/Colab Notebooks/Postpartum_depression/Reduced_PCL/data'"
+        "PTH = '/content/.../data'"
       ]
     },
     {
